Adding CSS details
- Create CSS files
- Revise README.md

--- a/odin-recipes/recipes/asparagus-pasta.html
+++ b/odin-recipes/recipes/asparagus-pasta.html
@@ -6,19 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Katherine Tsai" />
     <title>Lemon Asparagus Pasta</title>
+    <link rel="stylesheet" href="../styles/style.css" />
   </head>
   <body>
     <main>
       <h1>Lemon Asparagus Pasta</h1>
-      <p class="introduction">
-        This appetizing asparagus pasta dish is flavored with lemon zest and
-        lemon juice. It's easy to make and can sit out during warm weather. Can
-        be served hot, warm, or cold.
-      </p>
-      <img
-        src="https://www.allrecipes.com/thmb/mDc1ysZI0oG5sK4TPwTjdFcZ0B0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/957488-4a13ab05962e44a89f740958701e01a4.jpg"
-        alt="Asparagus pasta"
-      />
+      <section class="cover">
+        <p class="introduction">
+          This appetizing asparagus pasta dish is flavored with lemon zest and
+          lemon juice. It's easy to make and can sit out during warm weather.
+          Can be served hot, warm, or cold.
+        </p>
+        <img
+          class="pasta"
+          src="https://www.allrecipes.com/thmb/mDc1ysZI0oG5sK4TPwTjdFcZ0B0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/957488-4a13ab05962e44a89f740958701e01a4.jpg"
+          alt="Asparagus pasta"
+        />
+      </section>
+
       <article>
         <section class="ingredients">
           <h2>Ingredients</h2>
