--- a/odin-recipes/recipes/pasta-pomodoro.html
+++ b/odin-recipes/recipes/pasta-pomodoro.html
@@ -6,18 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Katherine Tsai" />
     <title>Pasta Pomodoro</title>
+    <link rel="stylesheet" href="../styles/style.css" />
   </head>
   <body>
     <main>
       <h1>Pasta Pomodoro</h1>
-      <p class="introduction">
-        Easy and light pasta with tomatoes and garlic. Cooked chicken breast
-        chunks or shrimp can also be added to sauce for a great main dish!
-      </p>
-      <img
-        src="https://www.allrecipes.com/thmb/irSkLD580rETTGnkPtsKxYeCud0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/632125-bb5fad2c11dc4aaa95e24a333c2289e8.jpg"
-        alt="pasta pomodoro"
-      />
+      <section class="cover">
+        <p class="introduction">
+          Easy and light pasta with tomatoes and garlic. Cooked chicken breast
+          chunks or shrimp can also be added to sauce for a great main dish!
+        </p>
+        <img
+          class="pasta"
+          src="https://www.allrecipes.com/thmb/irSkLD580rETTGnkPtsKxYeCud0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/632125-bb5fad2c11dc4aaa95e24a333c2289e8.jpg"
+          alt="pasta pomodoro"
+        />
+      </section>
+
       <article>
         <section class="ingredients">
           <h2>Ingredients</h2>
