--- a/odin-recipes/recipes/shrimp-pasta.html
+++ b/odin-recipes/recipes/shrimp-pasta.html
@@ -6,19 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Katherine Tsai" />
     <title>Creamy Shrimp Pasta Primavera</title>
+    <link rel="stylesheet" href="../styles/style.css" />
   </head>
   <body>
     <main>
       <h1>Creamy Shrimp Pasta Primavera</h1>
-      <p class="introduction">
-        This is a fun recipe that me and my family developed ourselves. It is
-        really flexible and you can swap out ingredients and change measurements
-        to your liking.
-      </p>
-      <img
-        src="https://www.allrecipes.com/thmb/1dUCQvgtO5-g9iQ4YxuBnY1_Yhk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1437479-7d7395a21fcb409d9e44662fcc82f56d.jpg"
-        alt="Shrimp pasta"
-      />
+      <section class="cover">
+        <p class="introduction">
+          This is a fun recipe that me and my family developed ourselves. It is
+          really flexible and you can swap out ingredients and change
+          measurements to your liking.
+        </p>
+        <img
+          class="pasta"
+          src="https://www.allrecipes.com/thmb/1dUCQvgtO5-g9iQ4YxuBnY1_Yhk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1437479-7d7395a21fcb409d9e44662fcc82f56d.jpg"
+          alt="Shrimp pasta"
+        />
+      </section>
       <article>
         <section class="ingredients">
           <h2>Ingredients</h2>
