--- a/etch-a-sketch/index.html
+++ b/etch-a-sketch/index.html
@@ -17,6 +17,10 @@
       ><button class="shading">Shading</button>
     </section>
     <section class="container"></section>
+    <footer class="attribute">
+      Code by
+      <a href="https://github.com/ytsai4" target="_blank">Katherine Tsai</a>
+    </footer>
     <script src="./app.js"></script>
   </body>
 </html>
